WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62649
Incorrect #if[n]def for building without DISPATCH_VM_PRESSURE
https://bugs.webkit.org/show_bug.cgi?id=62649
Summary
Incorrect #if[n]def for building without DISPATCH_VM_PRESSURE
Michael Saboff
Reported
2011-06-14 10:32:59 PDT
The #ifdef DISPATCH_VM_PRESSURE on line 43 of MemoryPressureHandlerMac.mm should actually be #ifndef.
Attachments
Proposed patch
(1.30 KB, patch)
2011-06-14 10:49 PDT
,
Michael Saboff
joepeck
: review+
Details
Formatted Diff
Diff
Updated patch
(1.30 KB, patch)
2011-06-14 15:35 PDT
,
Michael Saboff
no flags
Details
Formatted Diff
Diff
Right updated patch
(1.33 KB, patch)
2011-06-14 15:38 PDT
,
Michael Saboff
joepeck
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2011-06-14 10:49:56 PDT
Created
attachment 97140
[details]
Proposed patch
Joseph Pecoraro
Comment 2
2011-06-14 10:51:12 PDT
Comment on
attachment 97140
[details]
Proposed patch Thanks!
Michael Saboff
Comment 3
2011-06-14 10:55:12 PDT
Committed
r88823
: <
http://trac.webkit.org/changeset/88823
>
Andy Estes
Comment 4
2011-06-14 11:21:44 PDT
DISPATCH_VM_PRESSURE is an enum, not a macro, so this check doesn't actually work and ends up breaking the build on machines that do have the system header.
Andy Estes
Comment 5
2011-06-14 12:46:50 PDT
http://trac.webkit.org/changeset/88829
rolled this out. Reopening.
Michael Saboff
Comment 6
2011-06-14 15:35:33 PDT
Created
attachment 97173
[details]
Updated patch
Michael Saboff
Comment 7
2011-06-14 15:38:14 PDT
Created
attachment 97176
[details]
Right updated patch
Joseph Pecoraro
Comment 8
2011-06-14 15:39:28 PDT
Comment on
attachment 97176
[details]
Right updated patch Thanks again.
Michael Saboff
Comment 9
2011-06-14 16:30:42 PDT
Committed
r88871
: <
http://trac.webkit.org/changeset/88871
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug