2011-06-14  Michael Saboff  <msaboff@apple.com>

Reviewed by Joseph Pecoraro.

        Incorrect #if[n]def for building without DISPATCH_VM_PRESSURE
        https://bugs.webkit.org/show_bug.cgi?id=62649

        Take 2.
        The #ifdef DISPATCH_VM_PRESSURE doesn't work.  Combined the code
        inside this #ifdef with the prior #ifndef DISPATCH_SOURCE_TYPE_VM.

        No functional changes, fixing build issue therefore no tests.

        * platform/mac/MemoryPressureHandlerMac.mm:


Canonical link: https://commits.webkit.org/78233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88871 268f45cc-cd09-0410-ab3c-d52691b4dbfc